--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "dotenv": "^16.1.3",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "express-async-handler": "^1.2.0",
     "mongoose": "^7.2.2"
   },
   "devDependencies": {
