--- a/backend/package.json
+++ b/backend/package.json
@@ -12,7 +12,8 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-async-handler": "^1.2.0",
-    "mongoose": "^7.2.2"
+    "mongoose": "^7.2.2",
+    "nodemailer": "^6.9.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
