--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,8 @@
     "express-async-errors": "^3.1.1",
     "express-async-handler": "^1.2.0",
     "mongoose": "^7.2.2",
-    "nodemailer": "^6.9.3"
+    "nodemailer": "^6.9.3",
+    "stripe": "^12.8.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
