--- a/backend/package.json
+++ b/backend/package.json
@@ -7,12 +7,14 @@
     "start": "nodemon app.js"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.1.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "express-async-handler": "^1.2.0",
-    "mongoose": "^7.2.2",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.1",
     "nodemailer": "^6.9.3",
     "stripe": "^12.8.0"
   },
